# pptx-translate

./: .example.env  .gitignore  README.md  package.json  pyproject.toml  tsconfig.json  vitest.config.ts  wrapper.py
src/: cli.ts  main.ts  types.ts
src/ppttr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/pptx/: chart-deep.ts  extractor.ts  relationships.ts  repack.ts  slide-master.ts  smart-art.ts  unpack.ts  writer.ts  xml-fallback.ts
src/run-preservation/: distribute.ts  format-guard.ts  overflow.ts
src/translation/: batch-chunker.ts  cache.ts  marker.ts  prompt-builder.ts  provider.ts  rate-limiter.ts  response-parser.ts  service.ts
src/utils/: lang-detect.ts  logger.ts  text-utils.ts  xml-namespaces.ts
src/validation/: completeness.ts  diff-checker.ts  report-generator.ts
tests/fixtures/: chart.pptx  simple.pptx
tests/integration/: extractor.test.ts  unpack-repack.test.ts  writeback.test.ts
tests/unit/: batch-chunker.test.ts  cache.test.ts  chart-deep.test.ts  diff-checker.test.ts  distribute.test.ts  format-guard.test.ts  lang-detect.test.ts  marker.test.ts  overflow.test.ts  provider.test.ts  rate-limiter.test.ts  relationships.test.ts  response-parser.test.ts  slide-master.test.ts  smart-art.test.ts
