[project]
name = "ppttr"
version = "0.2.0"
description = "PPTX translation tool -- Python CLI facade for Node.js/bun core engine"
requires-python = ">=3.10"
dependencies = []  # No Python deps needed -- wrapper uses only stdlib

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["wrapper.py"]

[project.scripts]
ppttr = "wrapper:main"

[tool.uv]
package = true